<resources>
    <string name="app_name">NGIKUT</string>

    <string name="emailEdit">Email</string>
    <string name="passwordEdit">Password</string>
    <string name="loginButton">Login</string>
    <string name="signUp">Create Account</string>
    <string name="loginText">Login</string>
    <string name="signOutText">Sign Out</string>
    <string name="signUPText">Sign Up</string>
    <string name="nameEdit">Name</string>
    <string name="confirmPasswordEdit">Confirm Password</string>
    <string name="forgotPasswordText">Forgot Password</string>
    <string name="resetPasswordText">To reset password, enter your email, press the button and check your email for further instructions</string>
    <string name="resetPasswordBtn">Reset Password</string>
    <string name="returnToLoginTextView">Return to Login Screen</string>
<<<<<<< HEAD
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_profile">Profile</string>
    <string name="createEmail">Please enter your E-mail</string>
=======
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
>>>>>>> 34985ba8ea51752b92eff463d7101759cffa3ac8
</resources>
