<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.pam.ngikut.SignUpActivity">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/signupTitleTextView"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signUp"
                android:textSize="30sp"/>

            <EditText
                android:id="@+id/signUpNameEditText"
                android:layout_width="292dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:hint="@string/nameEdit"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/signUpEmailEditText"
                android:layout_width="292dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:hint="@string/emailEdit"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/signUpPasswordEditText"
                android:layout_width="292dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:ems="10"
                android:hint="@string/passwordEdit"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/signUpConfirmPasswordEditText"
                android:layout_width="292dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:ems="10"
                android:hint="@string/confirmPasswordEdit"
                android:inputType="textPassword" />
            <Button
                android:id="@+id/signUpButton"
                android:layout_width="292dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/signUPText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/loginReturnTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:text="@string/returnToLoginTextView" />
        </LinearLayout>

</RelativeLayout>
